--- a/home/toc.html
+++ b/home/toc.html
@@ -99,7 +99,7 @@
                           <a href="techguides/environment-basic-operations.html" name="" title="Perform Environment Basic Operations">Perform Environment Basic Operations</a>
                         </li>
                         <li>
-                          <a href="techguides/git-folder-standardisation.html" name="" title="Git Folder Standardisation">Git Folder Standardisation</a>
+                          <a href="techguides/git-folder-standardization.html" name="" title="Git Folder Standardization">Git Folder Standardization</a>
                         </li>
                         <li>
                           <a href="techguides/deploy-an-update-to-an-existing-environment.html" name="" title="Deploy an update to an existing environment">Deploy an update to an existing environment</a>
