--- a/home/techguides/git-folder-standardization.html
+++ b/home/techguides/git-folder-standardization.html
@@ -525,6 +525,9 @@
 <p> <img src="images/db.properties.png" alt=""></p>
 <p>If the folder inside TAFJDB.zip file is renamed, then it is mandatory in the db.properties to add the db-name the same as the db folder name and the credentials for the respective db.</p>
 <p> <img src="images/db.properties2.png" alt=""></p>
+<blockquote><p>[!Note
+If you want to overwrite the database it is important to do at least one change before deploying it. Otherwise the platform will pick the initial database only.</p>
+</blockquote>
 <h2 id="5-attachments">5. Attachments</h2>
 <p>You can download the Standalone OSS/ TSS and the db.properties files below:</p>
 <ul>
