--- a/home/techguides/itss-test-framework-template.html
+++ b/home/techguides/itss-test-framework-template.html
@@ -83,7 +83,7 @@
 
 <p>This page provides information about the ITSS Test Framework Template, the pre-requisites to run the template and an example of the test framework, its structure and a sample of the consolidated results file.</p>
 <h2 id="implementation">Implementation</h2>
-<p>The ITSS Test framework Template provide:</p>
+<p>The ITSS Test framework Template pre-requisites:</p>
 <ul>
 <li><p>Windows Server 2016 Datacenter Edition with the following software/packages pre-installed:</p>
 <ul>
@@ -96,21 +96,21 @@
 </ul>
 </li>
 </ul>
-<p>The Google Chrome Driver are downloaded to the ITSS client WebDriver folder in the provisioned VM.
+<p>The Google Chrome Driver is downloaded to the ITSS client WebDriver folder in the provisioned VM.
 <br>
 </br></p>
 <h2 id="itss-tool---general-information">ITSS tool - general information</h2>
 <ul>
-<li><p>The ITSS test tool has 2 parts, a Server and a Client. </p>
+<li><p>The ITSS test tool contains a Server and a Client. </p>
 </li>
 <li><p>The Test Cases and Test Campaigns (ITSS terminology for Test Scenarios) are created and maintained in the ITSS server. </p>
 </li>
-<li><p>To maintain the Test Component structure in Artifactory to fit with the Assemble principle, Temenos Continuous Deployment manages and promotes the configuration files instead of actual test cases and scenarios. Those configuration files gather all the necessary information for the ITSS test client to &quot;download&quot; from the ITSS test server at run time the set of test scenarios to run.</p>
+<li><p>To maintain the Test Component structure in Artifactory to fit with the Assemble principle, Temenos Continuous Deployment manages and promotes the configuration files instead of the actual test cases and scenarios. Those configuration files gather all the necessary information for the ITSS test client to &quot;download&quot; from the ITSS test server at run time the set of test scenarios to run.</p>
 </li>
 <li><p>The ITSS test framework is a Selenium-based framework embedded with other functionalities. See below the ITSS test client framework folder structure: </p>
 <p>+---remote</p>
 <p>|     +—config (default folder which contains the configuration files IBSRemote.properties and parameters.properties)</p>
-<p>|     +—lib (libraries of the ITSS client)</p>
+<p>|     +—lib (client ITSS libraries)</p>
 <p>|     +—out (default folder where manifest and .pdf files are generated)</p>
 <p>|     +—webdriver (default webdriver folder provided by the ITSS client framework)</p>
 <p>The 3 default folders can be used as such or redirected when launching a test framework. See below a sample folder structure:</p>
@@ -118,23 +118,23 @@
 </li>
 </ul>
 <h2 id="how-to-launch-itss-client-framework">How to launch ITSS client framework</h2>
-<p>To launch the ITSS client framework start.bat &lt; &lt; URL_T24/BrowserWeb &gt; &gt;  &lt; &lt; Test Campaign UUID &gt; &gt;.
+<p>To launch the ITSS client framework you need to start.bat &lt; &lt; URL_T24/BrowserWeb &gt; &gt;  &lt; &lt; Test Campaign UUID &gt; &gt;.
 <br>
 </br></p>
 <h2 id="the-test-script-structure">The Test Script Structure</h2>
-<p>As explained earlier, the config files that can be used by the ITSS Template must be a .zip file within a .zip. The name of the .zip files can have any name. The parent .zip file can contain multiple .zips of tests (see the screenshot below).</p>
+<p>The config files that can be used by the ITSS Template must be a .zip file within a .zip. The name of the .zip files can have any name. The parent .zip file can contain multiple .zips of tests (see the screenshot below).</p>
 <p> <img src="images/itss-config-file.png" alt=""></p>
 <p>Each test suite is a suite of config files that can be used by the ITSS client to connect to the ITSS server and download the test campaigns that will be executed. The test suite can have any name. Each test suite should contain the following files:</p>
 <ul>
 <li><p>IBSRemote.properties - the ITSS server connection parameters</p>
 </li>
 <li><p>parameters.properties - the test campaign details including Test Campaign UUID</p>
-<blockquote><p>Note
-The template consolidates all the results from the output folder of the ITSS Client and produces consolidated results.</p>
-<p>The platform moves these consolidated results to a centralized storage account and provides a download facility from the dashboard.</p>
-</blockquote>
 </li>
 </ul>
+<blockquote><p>Note:
+The template consolidates all the results from the output folder of the ITSS Client and produces consolidated results.
+The platform moves these consolidated results to a centralized storage account and provides a download facility from the dashboard.</p>
+</blockquote>
 <p><br>
 </br></p>
 <h3 id="ibsremoteproperties-file">IBSRemote.properties file</h3>
@@ -144,7 +144,7 @@ The template consolidates all the results from the output folder of the ITSS Cli
 </li>
 <li><p>ibs.server.api.key= &lt;&lt; ITSS Server API key &gt;&gt; (used to connect to the server API)</p>
 </li>
-<li><p>ibs.server.url=&lt;&lt; ITSS Server URL &gt;&gt; (used in the run time to check if the server is accessible → This parameter is by the Temenos template and not directly by the ITSS test Framework)</p>
+<li><p>ibs.server.url=&lt;&lt; ITSS Server URL &gt;&gt; (used in the run time to check if the server is accessible → This parameter is by the Temenos template and not directly by the ITSS test framework)</p>
 </li>
 </ul>
 <p><strong>The convention name is  “IBSRemote.properties”.</strong>
@@ -153,7 +153,7 @@ The template consolidates all the results from the output folder of the ITSS Cli
 <h3 id="parametersproperties-file">parameters.properties file</h3>
 <p>Same as above, see below example of the file structure:</p>
 <ul>
-<li><p>ibs.ta.param.testcase.id=&lt;&lt; TestCampaign-UUID &gt;&gt; - the value will be used by template at the run time. </p>
+<li><p>ibs.ta.param.testcase.id=&lt;&lt; TestCampaign-UUID &gt;&gt; - the value will be used by the template at the run time. </p>
 </li>
 <li><p>ibs.ta.param.user.id=&lt;&lt; UserAppUUID &gt;&gt;</p>
 </li>
@@ -169,20 +169,20 @@ The template consolidates all the results from the output folder of the ITSS Cli
 </br> </p>
 <h2 id="template-runtime">Template Runtime</h2>
 <ul>
-<li><p>The ITSS client is delivered with the Chrome driver. To avoid Chrome version compatibility issues, the test template will replace Chrome driver in sync with Chrome browser version deployed on the test VM.</p>
+<li><p>The ITSS client is delivered with the Chrome driver. To avoid Chrome version compatibility issues, the test template will replace Chrome driver in sync with the Chrome browser version deployed on the test VM.</p>
 </li>
 <li><p>Before the test execution, the template checks if the ITSS server is accessible and fails execution if not accessible.</p>
 </li>
 <li><p>In the event of a network issue preventing the ITSS client framework to connect to its server, a retry mechanism (once) is implemented if the test result files were not generated.</p>
 </li>
-<li><p>Temporarily, ibs.ta.param.testcase.id=&lt;&lt; TestCampaign-UUID &gt;&gt; from “parameters.properties“ file is used by the template at the run time to pass it as an argument to the ITSS test client execution command.</p>
+<li><p>Temporarily, ibs.ta.param.testcase.id=&lt;&lt; TestCampaign-UUID &gt;&gt; from <em>parameters.properties</em> file is used by the template at the run time to pass it as an argument to the ITSS test client execution command.</p>
 <ul>
 <li>This functionality from Temenos Continuous Platform is removed in the next phase when the ITSS team releases the next version of ITSS client which will pick the value from the files by default.</li>
 </ul>
 </li>
 <li><p>The standard output of the ITSS client command execution is written to a log file and is available for download as part of the .zip files.</p>
 </li>
-<li><p>A HTML file is generated dynamically and displays the contents of <strong>result.pdf</strong> generated as part of ITSS execution results.
+<li><p>A HTML file is generated dynamically and displays the contents of the <strong>result.pdf</strong> generated as part of the ITSS execution results.
 <br>
 </br></p>
 </li>
@@ -305,7 +305,9 @@ The template consolidates all the results from the output folder of the ITSS Cli
 &lt;duration&gt;112.94700&lt;/duration&gt;
 &lt;result&gt;FAIL&lt;/result&gt;
 &lt;hostName&gt;&lt;/hostName&gt;
-</code></pre><p>The consolidation utility generates the consolidated-results.xml file with the above details. The below table describes the manifest tags and their purposes.</p>
+</code></pre><p><br>
+</br></p>
+<p>The consolidation utility generates the consolidated-results.xml file with the above details. The below table describes the manifest tags and their purposes.</p>
 <table>
 <thead>
 <tr>
@@ -334,7 +336,9 @@ The template consolidates all the results from the output folder of the ITSS Cli
 </table>
 <p>The Temenos Continuous Deployment Platform will use this information to populate the dashboard. Below you will find an example format with both pass and fail test suites.</p>
 <p> <img src="images/itss-dashboard.png" alt=""></p>
-<p>The Temenos Continuous Deployment platform moves these consolidated results to a centralized storage account and provides a download facility from the dashboard for each test suite.</p>
+<p>The Temenos Continuous Deployment platform moves these consolidated results to a centralized storage account and provides a download facility from the dashboard for each test suite.
+<br>
+</br></p>
 <h2 id="attachments">Attachments</h2>
 <ul>
 <li><p>The sources of the sample config files, which can only be used as a sample and has to be supplied as per the needs is available <strong><a href="../zip/TestScript.zip">here </a></strong>.</p>
