--- a/home/techguides/https-in-front-of-sftp.html
+++ b/home/techguides/https-in-front-of-sftp.html
@@ -116,7 +116,8 @@
 </li>
 <li><p>Encryption - <strong>TLS/SSL</strong></p>
 </li>
-<li><p>Host name - copy it from your environment endpoint</p>
+<li><p>Host name - go to your environment page. Under the T24 Release section click on the <strong>Access Environment Files</strong>. A new page opens where you have to copy from the URL the SFTP link (ie. thisismysftp.temenos.cloud)</p>
+<p> <img src="images/sftp-endpoint.png" alt=""> </p>
 </li>
 <li><p>Port Number - <strong>443</strong></p>
 </li>
