--- a/home/toc.html
+++ b/home/toc.html
@@ -135,7 +135,7 @@
                           <a href="techguides/templates-list.html" name="" title="Available Templates">Available Templates</a>
                         </li>
                         <li>
-                          <a href="http://documentation.temenos.cloud/home/pdf/transact-components.pdf" name="" title="Transact Templates Overview">Transact Templates Overview</a>
+                          <a href="http://documentation.temenos.cloud/home/pdf/transact-components.pdf" name="" title="Transact Template Overview">Transact Template Overview</a>
                         </li>
                         <li>
                           <a href="http://documentation.temenos.cloud/home/techguides/selenium-template.html" name="" title="Selenium Template overview">Selenium Template overview</a>
