--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -123,11 +123,12 @@ responsibility to inform the new user about its credentials and set of permissio
 <p><img src="images/user-change-password4.png" alt=""></p>
 <blockquote><p>Note: on your first login, you need to reset the password that was initially created by the Organisation Admin.</p>
 </blockquote>
-<p><img src="images/user-change-password.png" alt=""></p>
+<p><img src="images/user-change-password.png" alt="">
+<br>
+</br></p>
 </li>
 </ol>
 <h1 id="recover-password">Recover Password</h1>
-<p><br></p>
 <h2 id="ask-the-organisation-admin-to-change-your-password">Ask the Organisation Admin to change your password</h2>
 <p>If you lost your password, your Organisation Admin can change it from his/ her end. To do this, the Organiation Admin needs to:</p>
 <ol>
@@ -153,7 +154,7 @@ responsibility to inform the new user about its credentials and set of permissio
 </br></p>
 </li>
 </ul>
-<h1 id="update-ssh-key">Update SSH Key</h1>
+<h1 id="update-the-ssh-key">Update the SSH Key</h1>
 <p>To Update the SSH Key, follow the instructions below:</p>
 <ol>
 <li><p>Click on your <strong>user name</strong> (top-right) and then on <strong>Profile</strong></p>
@@ -167,7 +168,8 @@ responsibility to inform the new user about its credentials and set of permissio
 </blockquote>
 </li>
 </ol>
-<p><br></p>
+<p><br>
+</br></p>
 <h1 id="user-roles-management">User Roles Management</h1>
 <p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
 <p><img src="images/see-user-role.png" alt=""></p>
