--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -202,14 +202,16 @@ responsibility to inform the new user about its credentials and set of permissio
 <li><p>If you opt to <strong>Logout</strong> or don’t take any action on the pop-up your session will expire. Note that the environment creation, factory runs or other organization operations will still be running. </p>
 </li>
 </ul>
-<p>The session is automatically extended when the you click on the <strong>Overview</strong> or <strong>Events</strong> tabs in the environments details page.</p>
-<h1 id="how-to-use-putty-ssh-client-for-ssh-key-generation">How to use PuTTY SSH client for SSH key generation.</h1>
+<p>The session is automatically extended when the you click on the <strong>Overview</strong> or <strong>Events</strong> tabs in the environments details page.
+ <br>
+</br></p>
+<h1 id="how-to-generate-ssh-key-for-your-user">How to generate SSH key for your user#</h1>
 <p>If you need access to the source code repository you must provide the public SSH Keys on the user profile section to gain access. You can use any other SSH key generator client.</p>
 <div class="NOTE"><h5>Note</h5><p>If you already have installed a SSH key generator client, you can skip this step.</p>
 </div>
 <p>•   Download the installer from <a href="http://www.putty.org/" title="http://www.putty.org/">http://www.putty.org/</a></p>
 <p>•   Run the installer and click <strong>Next</strong> on each screen, without changing anything in configurations. Click <strong>Finish</strong> once completed.</p>
-<h2 id="how-to-create-the-ssh-keys-pair-public-and-private-keys">How to create the SSH keys (pair public and private keys)</h2>
+<h3 id="how-to-create-the-ssh-keys-pair-public-and-private-keys">How to create the SSH keys (pair public and private keys)</h3>
 <p>•   Open PuTTYgen and click Generate button:</p>
 <p><img src="images/putty-keygen.png" alt="putty keygen"></p>
 <p>•   This creates a new SSH key by moving the mouse in the blank area (highlighted in red), as per bellow picture.</p>
@@ -221,8 +223,10 @@ responsibility to inform the new user about its credentials and set of permissio
 <p>•   From the PuTTYgen screen you must also save the private key. Press the Save private key button, choose &#39;Yes&#39; on the next prompt (save the key without a passphrase to protect it) and indicate a name and location for the private key.</p>
 <p><img src="images/putty-keygen-privatekey.png" alt="save private key"></p>
 <p>•   The public/private key location on your local machine should look like this:</p>
-<p><img src="images/putty-keygen-keyslocation.png" alt="public/private keys location"></p>
-<h2 id="how-to-add-users-on-the-portal-with-the-ssh-keys">How to add users on the portal with the SSH keys</h2>
+<p><img src="images/putty-keygen-keyslocation.png" alt="public/private keys location">
+<br>
+</br></p>
+<h3 id="how-to-add-users-on-the-portal-with-the-ssh-keys">How to add users on the portal with the SSH keys</h3>
 <div class="NOTE"><h5>Note</h5><p>All fields are mandatory!
 See further below how to generate the SSH key</p>
 </div>
