--- a/docfx_project/site/home/techguides/export-import-database.html
+++ b/docfx_project/site/home/techguides/export-import-database.html
@@ -85,13 +85,13 @@
 <p>Login to your organization on the TCD (Temenos Continuous Deployment) portal (<a href="https://portal.temenos.cloud/">portal.temenos.cloud</a>) read and accept the privacy notice.</p>
 <p><img src="images/db-login.png" width="450" height="200"></p>
 <h2 id="create-an-environment">Create an Environment</h2>
-<p>To see how to create an environment, please also check <a href="environment-creation-in-paas.html" target="_blank"><strong>this</strong></a> user guide.</p>
+<p>To see how to create an environment, please also check <a href="./environment-creation-in-paas.md" target="_blank"><strong>this</strong></a> user guide.</p>
 <div class="NOTE"><h5>Note</h5><p>For this user guide, there are two environments created: </p>
 <ul>
 <li>DevEnv</li>
 <li>DevEnv1</li>
 </ul>
-<p>They will be used to see how to export the DB from one environment and import it into the other one.</p>
+<p>These will be used to see how to export the DB from one environment and import it into the other one.</p>
 </div>
 <h2 id="amend-a-customer-record">Amend a customer record</h2>
 <ul>
@@ -104,7 +104,8 @@
 <ul>
 <li>Change the GB Town/City from the Physical Address tab and then press <strong>Commit the deal</strong> button <img src="images/db-commit-button.png" alt=""> in order to save the change. </li>
 </ul>
-<p><strong>Note</strong>: You can do any change on any record type)*</p>
+<div class="NOTE"><h5>Note</h5><p>You can do any change on any record type)*</p>
+</div>
 <p>   <img src="images/db-amend-info.png" alt=""> 
 <br></p>
 <ul>
@@ -132,7 +133,7 @@
 <p>  <img src="images/export-db.png" alt=""> </p>
 </li>
 </ol>
-<p>After clicking the export starts (the action takes around a few minutes based on the DB size). While exporting, the button is disabled, after the export is done, the button gets enabled back.</p>
+<p>After clicking the export starts (the action takes around a few minutes based on the DB size). While exporting, the button is disabled. After the export is done, the button is enabled back.</p>
 <p><img src="images/db-exporting.png" alt=""> </p>
 <p>To see the logs sequence for the Database Export go the <strong>Events</strong> tab on your environment:</p>
 <p><img src="images/db-export-logs.png" alt=""> </p>
