--- a/docfx_project/site/home/techguides/t24-development.html
+++ b/docfx_project/site/home/techguides/t24-development.html
@@ -100,7 +100,7 @@
 <li>After commiting and pushing to Environment Repository all the features, you have to deploy them in your Environment. </li>
 <li>Login to your organisation, select your environment, locate the Repository Application and click the Deploy button. </li>
 </ul>
-<p>For more details about the deployment, check the following <a href="use-gitlab-repository.md#trigger-deployment"><ins><strong>steps</strong></ins></a>.</p>
+<p>For more details about the deployment, check the following <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html"><ins><strong>steps</strong></ins></a>.</p>
 <h2 id="check-jbc-routines-deployment-to-sandbox">Check jBC routines deployment to Sandbox</h2>
 <ul>
 <li>Log-in to your organisation into the Temenos Continuos Deployment Platform, go to your enviroment page and click on the <strong>Monitor Application</strong> Endpoint for the T24 application.<br><img src="images/t24-monitor-app.png" alt="monitor application"><br><br></li>
